fix: decrease WindowsToolbar z-index down to 1 to avoid competing with other views

--- a/src/components/WindowsToolbar/WindowsToolbar.sass
+++ b/src/components/WindowsToolbar/WindowsToolbar.sass
@@ -14,7 +14,7 @@
 	display: flex
 	font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif
 	font-size: 12px
-	z-index: 999
+	z-index: 1
 
 	@at-root :global(.WindowsToolbar .DragRegion),
 	.DragRegion
